fix:Issue-160: Fix load average issue (#161)
Renames load average 10 minuyes to 15 minutes which is the correct
value.

Breaking changes: Breaks both the library and the api.

Resolves: #160
